@@ -125,6 +125,9 @@ Lintian-Tags: init.d-script-needs-depends-on-lsb-base
 Fix-Script: maintainer-also-in-uploaders.py
 Lintian-Tags: maintainer-also-in-uploaders.
 
+Fix-Script: older-source-format.py
+Lintian-Tags: older-source-format
+
 Fix-Script: missing-debian-source-format.py
 Lintian-Tags: missing-debian-source-format
 
